# artemis-cosmos-rpi-fsw

./: .gitignore  Dockerfile  README.md
.github/workflows/: c-cpp.yml  test-compilation.yml
resources/cosmos/nodes/: nodeids.ini
scripts/: run_camera_script
source/: CMakeLists.txt
source/cmake/: macros.cmake
source/libraries/: CMakeLists.txt
source/libraries/channel/: CMakeLists.txt  exec_channel.cpp  payload_channel.cpp  rpi_channels.cpp  rpi_channels.h  teensy_channel.cpp
source/programs/: CMakeLists.txt
source/programs/general/: CMakeLists.txt  list_devices.cpp  make_devices.cpp
source/programs/i2ctest/: CMakeLists.txt  i2ctest.cpp
source/programs/obc/: CMakeLists.txt  agent_rpi.cpp
source/scripts/: capture.py
